# vcd-to-wavedrom

./: .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml
samples/: counter.json  counter.vcd
src/vcd2wavedrom/: __init__.py  cli.py  emitter.py  model.py  parser.py
tests/: test_cli.py  test_emitter.py  test_parser.py
tests/fixtures/: example.vcd  example_expected.json  simple.vcd  simple_expected.json
