[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vcd2wavedrom"
version = "0.1.0"
description = "Convert VCD simulation dumps to WaveDrom WaveJSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vcd2wavedrom = "vcd2wavedrom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8"]
